--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ idna==2.10
 joblib==1.0.1
 numpy==1.20.3
 packaging==20.9
+pandas==1.2.4
 Pillow==8.2.0
 pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
 regex==2021.4.4
 requests==2.25.1
 sacremoses==0.0.45
